--- a/app/Signup/Signup.module.css
+++ b/app/Signup/Signup.module.css
@@ -83,3 +83,8 @@
 .footerText a:hover {
   text-decoration: underline;
 }
+.select {
+  margin-bottom: 8px;
+  display: block;
+  font-weight: bold;
+}
